--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -1,58 +1,75 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+
+
 {% block title %}Home - Ii Labis Store{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
 <section id="home" class="hero-section text-center">
-    <div class="container">
-        <h1 class="display-4">Welcome to Ii labis  </h1>
-        <p class="lead">Shop the latest trends in fashion, Bridals, and more!</p>
-    </div>
-</section>
+    <div id="heroCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators (Optional) -->
+        <ol class="carousel-indicators">
+            <li data-target="#heroCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#heroCarousel" data-slide-to="1"></li>
+            <li data-target="#heroCarousel" data-slide-to="2"></li>
+            <li data-target="#heroCarousel" data-slide-to="3"></li>
+        </ol>
 
-<!-- Products Section -->
-<section id="products" class="products-section py-5">
-    {% load static %}
-    <div class="container">
-        <h2 class="text-center mb-5">Bridal Diracs</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="{% static 'images/product1.jpg' %}" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Bridal Dirac</h5>
-                        <h6>Pink Gold</h6>
-                        <p class="card-text">$199.99</p>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                    </div>
+        <!-- Carousel Inner -->
+        <div class="carousel-inner">
+            <!-- Slide 1 -->
+            <div class="carousel-item active">
+                <img src="{% static 'images/product6.jpg' %}" class="d-block w-100" alt="Product 1">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="display-4">Bridal Dirac</h5>
+                    <p>Pink Gold - $199.99</p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="{% static 'images/product2.jpg' %}" class="card-img-top" alt="Product 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Bridal Dirac</h5>
-                        <h6>White Gold</h6>
-                        <p class="card-text">$299.99</p>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                    </div>
+
+            <!-- Slide 2 -->
+            <div class="carousel-item">
+                <img src="{% static 'images/product5.jpg' %}" class="d-block w-100" alt="Product 2">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="display-4">Bridal Dirac</h5>
+                    <p>White Gold - $299.99</p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="{% static 'images/product3.jpg' %}" class="card-img-top" alt="Product 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Bridal Dirac</h5>
-                        <h6>Green Gold</h6>
-                        <p class="card-text">$179.99</p>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                    </div>
+
+            <!-- Slide 3 -->
+            <div class="carousel-item">
+                <img src="{% static 'images/product7.jpg' %}" class="d-block w-100" alt="Product 3">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="display-4">Bridal Dirac</h5>
+                    <p>Green Gold - $179.99</p>
+                </div>
+            </div>
+
+            <!-- Slide 4 -->
+            <div class="carousel-item">
+                <img src="{% static 'images/product8.jpg' %}" class="d-block w-100" alt="Product 4">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="display-4">Bridal Dirac</h5>
+                    <p>Pink Gold - $199.99</p>
                 </div>
             </div>
         </div>
+
+        <!-- Controls -->
+        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </section>
+
+<!-- Abay's Section -->
 <section id="products" class="products-section py-5"></section>
     {% load static %}
     <div class="container">
@@ -60,7 +77,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="{% static 'images/product7.jpg' %}" class="card-img-top" alt="Product 7
+                    <img src="{% static 'images/product4.jpg' %}" class="card-img-top" alt="Product 7
                     ">
                     <div class="card-body">
                         <h5 class="card-title">Bridal Dirac</h5>
@@ -72,7 +89,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="{% static 'images/product5.jpg' %}" class="card-img-top" alt="Product 5">
+                    <img src="{% static 'images/product1.jpg' %}" class="card-img-top" alt="Product 5">
                     <div class="card-body">
                         <h5 class="card-title">Bridal Dirac</h5>
                         <h6>White Gold</h6>
@@ -95,6 +112,8 @@
         </div>
     </div>
 </section>
+
+<!-- Dirac's Section -->
 <section id="products" class="products-section py-5"></section>
     {% load static %}
     <div class="container">
